--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
-    <html lang="fr">
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Orinoco achat de cameras vintages</title>
 
-        <link rel="icon" type="image/x-icon" href="../favicon (3).ico">
+        <link rel="icon" type="image/x-icon" href="../favicon.ico">
         
-        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap-grid.min.css" as="style">
-		<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style"/>
-		<link rel="preload" href="style.css" as="style">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style"/>
+        <link rel="preload" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" as="style">
+        <link rel="preload" href="style.css" as="style">
 
         <meta name="description" content="Orinoco, votre site d'achat de cameras vintages sur internet à prix abordables.">
-    
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap-grid.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
-		<link rel="stylesheet" href="style.css">
+        <meta name="author" content="Julien Brazzalotto">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+        <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container">
+        <header>
+            <a href="index.html"><img src="../images/logo.webp" alt="Logo Orinoco"></a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="produits.html">Nos produits</a></li>
+                    <li><a href="panier.html">Panier<i class="fas fa-shopping-cart"></i></a></li>
+                </ul>
+            </nav>
+        </header>
+        <article>
+            <h1>Vous êtes à la recherche de cameras vintages !!!</h1>
+            <a href="./produits.html"> Découvrer nos produits</a>
+        </article>
+        <footer>
+            <h2>Orinoco</h2>
+            <ul>
+                <li><a href="#">L'entreprise</a></li>
+                <li><a href="produits.html">Nos produits</a></li>
+                <li><a href="#">Nos Services</a></li>
+                <li><a href="mailto:contact@oronico.fr">Contact</a></li>
+            </ul>
+        </footer>
 
-
-
-
-        </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/js/bootstrap.min.js" defer></script>
     </body>
-    </html>
+</html>
