--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
         
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style"/>
         <link rel="preload" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" as="style">
-        <link rel="preload" href="style.css" as="style">
+        <link rel="preload" href="../public/css/style.css" as="style">
 
         <meta name="description" content="Orinoco, votre site d'achat de cameras vintages sur internet à prix abordables.">
         <meta name="author" content="Julien Brazzalotto">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../public/css/style.css">
     </head>
     <body>
         <header>
@@ -32,6 +32,7 @@
         </header>
         <article>
             <h1>Vous êtes à la recherche de cameras vintages !!!</h1>
+            <img src="../images/photoaccueil.webp" alt="">
             <a href="./produits.html"> Découvrer nos produits</a>
         </article>
         <footer>
@@ -43,6 +44,5 @@
                 <li><a href="mailto:contact@oronico.fr">Contact</a></li>
             </ul>
         </footer>
-
     </body>
 </html>
