fin page index html et css avec bootstrap

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
         <link rel="icon" type="image/x-icon" href="../favicon.ico">
         
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap.min.css" as="style">
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style"/>
         <link rel="preload" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" as="style">
         <link rel="preload" href="../public/css/style.css" as="style">
@@ -15,34 +16,59 @@
         <meta name="description" content="Orinoco, votre site d'achat de cameras vintages sur internet à prix abordables.">
         <meta name="author" content="Julien Brazzalotto">
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
         <link rel="stylesheet" href="../public/css/style.css">
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="../images/logo.webp" alt="Logo Orinoco"></a>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="produits.html">Nos produits</a></li>
-                    <li><a href="panier.html">Panier<i class="fas fa-shopping-cart"></i></a></li>
-                </ul>
-            </nav>
+            <nav class="col-12 container-fluid navbar navbar-expand-lg navbar-light px-4">
+                <a class="col-7 navbar-brand" href="index.html"><img src="../images/logo.webp" alt="Logo orinoco"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="col collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./produits.html">Nos produits</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="./panier.html">Panier<i class="fas fa-shopping-cart"></i></a>
+                        </li>
+                    </ul>
+                </div>
+              </nav>
         </header>
-        <article>
+        <article class="text-center">
             <h1>Vous êtes à la recherche de cameras vintages !!!</h1>
-            <img src="../images/photoaccueil.webp" alt="">
             <a href="./produits.html"> Découvrer nos produits</a>
         </article>
-        <footer>
-            <h2>Orinoco</h2>
-            <ul>
-                <li><a href="#">L'entreprise</a></li>
-                <li><a href="produits.html">Nos produits</a></li>
-                <li><a href="#">Nos Services</a></li>
-                <li><a href="mailto:contact@oronico.fr">Contact</a></li>
+        <footer class="text-center">
+            <h2 class="py-5">Orinoco</h2>
+            <ul class="services col-md-12">
+                <li><a class="px-5" href="#">L'entreprise</a></li>
+                <li><a class="px-5" href="produits.html">Nos produits</a></li>
+                <li><a class="px-5" href="#">Nos Services</a></li>
+                <li><a class="px-5" href="mailto:contact@oronico.fr">Contact</a></li>
             </ul>
+            <div class="col-md-12 py-5">
+                <ul class="reseaux">
+                    <li><a class="fb-ic px-3"><i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
+                    <li><a class="tw-ic px-3"><i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
+                    <li><a class="li-ic px-3"><i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
+                    <li><a class="ins-ic px-3"><i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
+                    <li><a class="pin-ic px-3"><i class="fab fa-pinterest fa-lg white-text fa-2x"></i></a></li>
+                </ul>
+            </div>
+            <div class="footer-copyright text-center py-3">
+                © 2021 Copyright: Brazzalotto
+            </div>
         </footer>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/js/bootstrap.min.js"></script>
     </body>
 </html>
