--- a/public/index.html
+++ b/public/index.html
@@ -28,43 +28,43 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="col collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
+                <div class="justify-content-lg-end col collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav p-0">
+                        <li class="nav-item p-3">
                         <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item p-3">
                         <a class="nav-link" href="./produits.html">Nos produits</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item p-3">
                         <a class="nav-link" href="./panier.html">Panier<i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </ul>
                 </div>
               </nav>
         </header>
-        <article class="text-center">
-            <h1>Vous êtes à la recherche de cameras vintages !!!</h1>
-            <a href="./produits.html"> Découvrer nos produits</a>
+        <article class="text-center d-flex flex-column align-items-center justify-content-between">
+            <h1 class="mt-5 pt-5">Vous êtes à la recherche de cameras vintages !!!</h1>
+            <a class="mb-5 p-3" href="./produits.html"> Découvrer nos produits</a>
         </article>
         <footer class="text-center">
             <h2 class="py-5">Orinoco</h2>
-            <ul class="services col-md-12">
+            <ul class="d-flex flex-column flex-lg-row justify-content-center col-md-12 p-0">
                 <li><a class="px-5" href="#">L'entreprise</a></li>
                 <li><a class="px-5" href="produits.html">Nos produits</a></li>
                 <li><a class="px-5" href="#">Nos Services</a></li>
                 <li><a class="px-5" href="mailto:contact@oronico.fr">Contact</a></li>
             </ul>
             <div class="col-md-12 py-5">
-                <ul class="reseaux">
-                    <li><a class="fb-ic px-3"><i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
-                    <li><a class="tw-ic px-3"><i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
-                    <li><a class="li-ic px-3"><i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
-                    <li><a class="ins-ic px-3"><i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
-                    <li><a class="pin-ic px-3"><i class="fab fa-pinterest fa-lg white-text fa-2x"></i></a></li>
+                <ul class="d-flex justify-content-center p-0">
+                    <li><a class="fb-ic px-2"><i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
+                    <li><a class="tw-ic px-2"><i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
+                    <li><a class="li-ic px-2"><i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
+                    <li><a class="ins-ic px-2"><i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
+                    <li><a class="pin-ic px-2"><i class="fab fa-pinterest fa-lg white-text fa-2x"></i></a></li>
                 </ul>
             </div>
-            <div class="footer-copyright text-center py-3">
+            <div class="text-center py-3">
                 © 2021 Copyright: Brazzalotto
             </div>
         </footer>
