essais du back end

--- a/public/produits.html
+++ b/public/produits.html
@@ -31,44 +31,26 @@
                 <div class="justify-content-lg-end col collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav p-0">
                         <li class="nav-item p-3">
-                        <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
+                        <a class="nav-link" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item p-3">
-                        <a class="nav-link" href="./produits.html">Nos produits</a>
+                        <a class="nav-link active" aria-current="page" href="./produits.html">Nos produits</a>
                         </li>
                         <li class="nav-item p-3">
-                        <a class="nav-link" href="./panier.html">Panier<i class="fas fa-shopping-cart"></i></a>
+                        <a class="nav-link" href="./panier.html"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </ul>
                 </div>
             </nav>
-            <hr size=1 class="my-0">
+            <div class="line"></div>
         </header>
         <main class="text-center">
-            <h1 class="my-0 py-5">Les produits Orinoco</h1>
-            <div class="d-flex justify-content-center container py-5">
-                <div class="col-6">
-                    <img class="w-75" src="../images/vcam_1.jpg" alt="Camera 1">
-                </div>
-                <div class="col-6">
-                    <img class="w-75" src="../images/vcam_2.jpg" alt="Camera 2">
-                </div>
-            </div>
-            <div class="d-flex justify-content-center container py-5">
-                <div class="col-4">
-                    <img class="w-75" src="../images/vcam_3.jpg" alt="Camera 3">
-                </div>
-                <div class="col-4">
-                    <img class="w-75" src="../images/vcam_4.jpg" alt="Camera 4">
-                </div>
-                <div class="col-4">
-                    <img class="w-75" src="../images/vcam_5.jpg" alt="Camera 5">
-                </div>
-            </div>
-            <hr size=1 class="my-0">
+            <h1 class="my-0 py-5">Choissisez votre modèle de lentille</h1>
+            
+            <div class="line"></div>
         </main>
         <footer class="text-center">
-            <h2 class="py-5">Orinoco</h2>
+            <h3 class="py-5">Orinoco</h3>
             <ul class="d-flex flex-column flex-lg-row justify-content-center col-md-12 p-0">
                 <li><a class="px-5" href="#">L'entreprise</a></li>
                 <li><a class="px-5" href="produits.html">Nos produits</a></li>
