--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <body>
         <header>
             <nav class="col-12 container-fluid navbar navbar-expand-lg navbar-light px-4">
-                <a class="col-7 navbar-brand" href="index.html"><img src="../images/logo.webp" alt="Logo orinoco"></a>
+                <a class="col-3 navbar-brand" href="index.html"><img src="../images/logo.webp" alt="Logo orinoco"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -37,18 +37,24 @@
                         <a class="nav-link" href="./produits.html">Nos produits</a>
                         </li>
                         <li class="nav-item p-3">
-                        <a class="nav-link" href="./panier.html">Panier<i class="fas fa-shopping-cart"></i></a>
+                        <a class="nav-link" href="./panier.html"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </ul>
                 </div>
-              </nav>
+            </nav>
+            <div class="line"></div>
         </header>
-        <article class="text-center d-flex flex-column align-items-center justify-content-between">
-            <h1 class="mt-5 pt-5">Vous êtes à la recherche de cameras vintages !!!</h1>
-            <a class="mb-5 p-3" href="./produits.html"> Découvrer nos produits</a>
-        </article>
+
+        <main class="text-center">
+            <h1 class="my-0 py-5">Orinoco, les cameras vintages dont vous rêver !!!</h1>
+            <!--récupérer les produits-->
+            <div></div>
+            <!--Fin récupérer les produits-->
+            <div class="line"></div>
+        </main>
+
         <footer class="text-center">
-            <h2 class="py-5">Orinoco</h2>
+            <h3 class="py-5">Orinoco</h3>
             <ul class="d-flex flex-column flex-lg-row justify-content-center col-md-12 p-0">
                 <li><a class="px-5" href="#">L'entreprise</a></li>
                 <li><a class="px-5" href="produits.html">Nos produits</a></li>
