fin page accueil avec affichage des produits

--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,23 @@
 
         <main class="text-center">
             <h1 class="my-0 py-5">Orinoco, les cameras vintages dont vous rêver !!!</h1>
-            <!--récupérer les produits-->
-            <div></div>
-            <!--Fin récupérer les produits-->
+            <div id="display" class="h-100 w-100 col-12 d-flex flex-column flex-xl-row align-items-center justify-content-xl-center container p-5">
+                <!--récupérer les produits-->
+                <template id="template" class="text-center">
+                    <div class="box mx-3 my-3 rounded-3 bg-dark w-100 h-100">
+                        <figure>
+                            <img class="img-dimension rounded-3 w-100" id="image" src="" alt="">
+                            <figcaption class="w-100">
+                                <h2 id="title">Titre</h2>
+                                <p id="description" class="text-white">description</p>
+                                <p id="price" class="text-white">Prix</p>
+                            </figcaption>
+                            <button class="bg-white text-dark border-dark mb-1">Choisir ce modèle</button>                    
+                        </figure>
+                    </div>
+                </template>
+                <!--Fin récupérer les produits-->
+            </div>
             <div class="line"></div>
         </main>
 
@@ -76,5 +90,6 @@
         </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/js/bootstrap.min.js"></script>
+        <script src="./js/index.js" defer></script>
     </body>
 </html>
