petite modif oublié

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         </header>
 
         <main class="text-center">
-            <h1 class="my-0 py-5">Orinoco, les cameras vintages dont vous rêver !!!</h1>
+            <h1 class="my-0 py-5">Orinoco, les cameras vintages dont vous rêvez !!!</h1>
             <div id="display" class="h-100 w-100 col-12 d-flex flex-column flex-xl-row align-items-center justify-content-xl-center container p-5">
                 <!--récupérer les produits-->
                 <template id="template" class="text-center">
