réflexion produits.html avec le JS a faire

--- a/public/confirmation.html
+++ b/public/confirmation.html
@@ -49,7 +49,9 @@
             <section>
                 <h1 class="my-0 py-5">Nous validons votre commande</h1>
                 <h2>Vous recevrez votre commande d'ici 3 jours à l'adresse suivante</h2>
-                <div></div>
+                <div>
+                    
+                </div>
             </section>
         
             <div class="line"></div>
