--- a/public/panier.html
+++ b/public/panier.html
@@ -51,7 +51,7 @@
             </section>
             <section>
                 <h2 class="text-dark">Adresse de livraison</h2>
-                <form>
+                <form method="GET">
                     <ul>
                         <li class="m-2">
                             <label for="firstname">Prénom:</label>
