--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
             <h3 class="py-5">Orinoco</h3>
             <ul class="d-flex flex-column flex-lg-row justify-content-center col-md-12 p-0">
                 <li><a class="px-5" href="#">L'entreprise</a></li>
-                <li><a class="px-5" href="produits.html">Nos produits</a></li>
+                <li><a class="px-5" href="index.html">Nos produits</a></li>
                 <li><a class="px-5" href="#">Nos Services</a></li>
                 <li><a class="px-5" href="mailto:contact@oronico.fr">Contact</a></li>
             </ul>
