template supprimé + ajout de l'URL produit avec ID

--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,6 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item p-3">
-                        <a class="nav-link" href="./produits.html">Nos produits</a>
-                        </li>
-                        <li class="nav-item p-3">
                         <a class="nav-link" href="./panier.html"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </ul>
@@ -47,20 +44,7 @@
 
         <main class="text-center">
             <h1 class="my-0 py-5">Orinoco, les cameras vintages dont vous rêvez !!!</h1>
-            <div id="display" class="h-100 w-100 col-12 d-flex flex-column flex-xl-row align-items-center justify-content-xl-center container p-5">
-                <template id="template" class="text-center">
-                    <div class="box mx-3 my-3 rounded-3 bg-dark w-100 h-100">
-                        <figure>
-                            <img class="img-dimension rounded-3 w-100" id="image" src="" alt="">
-                            <figcaption class="w-100">
-                                <h2 id="title">Titre</h2>
-                                <p id="description" class="text-white">description</p>
-                                <p id="price" class="text-white">Prix</p>
-                            </figcaption>
-                            <button class="bg-white text-dark border-dark mb-1">Choisir ce modèle</button>                    
-                        </figure>
-                    </div>
-                </template>
+            <div id="display" class="h-100 w-100 col-12 d-flex flex-column flex-xxl-row align-items-center justify-content-xxl-center container p-5">
             </div>
             <div class="line"></div>
         </main>
