ajout bouton de navigation

--- a/public/produits.html
+++ b/public/produits.html
@@ -45,6 +45,11 @@
             <h1 class="my-0 py-5">Personnalisez votre caméra !!!</h1>
             <div id="display" class="h-100 w-100 col-12 d-flex flex-column flex-xl-row align-items-center justify-content-xl-center container p-5">
             </div>
+            <div class="mb-5">
+                <a class="lien border border-2 border-dark rounded-pill p-3 me-5" href="index.html">Retour aux produits</a>
+                <a class="lien border border-2 border-dark rounded-pill p-3" href="panier.html">Voir le panier</a>
+            </div>
+            
             <div class="line"></div>
         </main>
         <footer class="text-center">
