--- a/public/panier.html
+++ b/public/panier.html
@@ -42,9 +42,29 @@
             <div class="line"></div>
         </header>
         <main class="text-center">
-            <section>
+            <section class="d-flex flex-column align-items-center">
                 <h1 class="my-0 py-5">Votre panier</h1>
-
+                <table class="mb-5">
+                    <thead>
+                        <tr>
+                            <th class="px-5">Article</th>
+                            <th class="px-5">Option</th>
+                            <th class="px-5">Quantité</th>
+                            <th class="px-5">Prix a l'unité</th>
+                        </tr>
+                    </thead>
+                    <tbody id="display">
+                        
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <th></th>
+                            <th></th>
+                            <th>Total</th>
+                            <th id="total"></th>
+                        </tr>
+                    </tfoot>
+                </table>
             </section>
             <section>
                 <h2 class="text-dark">Adresse de livraison</h2>
@@ -100,5 +120,6 @@
         </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/js/bootstrap.min.js"></script>
+        <script src="./js/panier.js"></script>
     </body>
 </html>
