changement vu avec philippe dossier views

--- a/public/index.html
+++ b/public/index.html
@@ -24,17 +24,17 @@
     <body>
         <header>
             <nav class="col-12 container-fluid navbar navbar-expand-lg navbar-light px-4">
-                <a class="col-3 navbar-brand" href="index.html"><img src="../images/logo.webp" alt="Logo orinoco"></a>
+                <a class="col-3 navbar-brand" href="/public/index.html"><img src="../images/logo.webp" alt="Logo orinoco"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="justify-content-lg-end col collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav p-0">
                         <li class="nav-item p-3">
-                        <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
+                        <a class="nav-link active" aria-current="page" href="/public/index.html">Accueil</a>
                         </li>
                         <li class="nav-item p-3">
-                        <a class="nav-link" href="./panier.html"><i class="fas fa-shopping-cart"></i></a>
+                        <a class="nav-link" href="./views/panier.html"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -53,7 +53,7 @@
             <h3 class="py-5">Orinoco</h3>
             <ul class="d-flex flex-column flex-lg-row justify-content-center col-md-12 p-0">
                 <li><a class="px-5" href="#">L'entreprise</a></li>
-                <li><a class="px-5" href="index.html">Nos produits</a></li>
+                <li><a class="px-5" href="/public/index.html">Nos produits</a></li>
                 <li><a class="px-5" href="#">Nos Services</a></li>
                 <li><a class="px-5" href="mailto:contact@oronico.fr">Contact</a></li>
             </ul>
