--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Orinoco achat de cameras vintages</title>
 
-        <link rel="icon" type="image/x-icon" href="../favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
         
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap.min.css" as="style">
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" as="style"/>
         <link rel="preload" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" as="style">
-        <link rel="preload" href="../public/css/style.css" as="style">
+        <link rel="preload" href="/public/css/style.css" as="style">
 
         <meta name="description" content="Orinoco, votre site d'achat de cameras vintages sur internet à prix abordables.">
         <meta name="author" content="Julien Brazzalotto">
@@ -19,12 +19,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-        <link rel="stylesheet" href="../public/css/style.css">
+        <link rel="stylesheet" href="/public/css/style.css">
     </head>
     <body>
         <header>
             <nav class="col-12 container-fluid navbar navbar-expand-lg navbar-light px-4">
-                <a class="col-3 navbar-brand" href="/public/index.html"><img src="../images/logo.webp" alt="Logo orinoco"></a>
+                <a class="col-3 navbar-brand" href="/public/index.html"><img src="/images/logo.webp" alt="Logo orinoco"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,7 +34,7 @@
                         <a class="nav-link active" aria-current="page" href="/public/index.html">Accueil</a>
                         </li>
                         <li class="nav-item p-3">
-                        <a class="nav-link" href="./views/panier.html"><i class="fas fa-shopping-cart"></i></a>
+                        <a class="nav-link" href="/public/views/panier.html"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -72,6 +72,6 @@
         </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.1/js/bootstrap.min.js"></script>
-        <script src="./js/index.js" defer></script>
+        <script src="/public/js/index.js" defer></script>
     </body>
 </html>
