--- a/public/index.html
+++ b/public/index.html
@@ -51,14 +51,14 @@
 
         <footer class="text-center">
             <h3 class="py-5">Orinoco</h3>
-            <ul class="d-flex flex-column flex-lg-row justify-content-center col-md-12 p-0">
+            <ul class="d-flex flex-column flex-lg-row justify-content-center col-md-12 p-0 list-unstyled">
                 <li><a class="px-5" href="#">L'entreprise</a></li>
                 <li><a class="px-5" href="./index.html">Nos produits</a></li>
                 <li><a class="px-5" href="#">Nos Services</a></li>
                 <li><a class="px-5" href="mailto:contact@oronico.fr">Contact</a></li>
             </ul>
             <div class="col-md-12 py-5">
-                <ul class="d-flex justify-content-center p-0">
+                <ul class="d-flex justify-content-center p-0 list-unstyled">
                     <li><a class="fb-ic px-2"><i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
                     <li><a class="tw-ic px-2"><i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
                     <li><a class="li-ic px-2"><i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i></a></li>
